<resources>
    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="setting_key_filter_size">filter_size</string>
    <string name="setting_key_filter_time">filter_time</string>

    <string name="app_name">一乐</string>
    <string name="slogan">听见好时光</string>
    <string name="fm_name">一乐FM</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="loading">努力加载中…</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
    <string name="local_music">我的音乐</string>
    <string name="online_music">在线音乐</string>
    <string name="unknown">未知</string>
    <string name="delete_music">删除%s？</string>
    <string name="setting_ringtone_success">设置铃声成功</string>
    <string name="no_local_music">暂无本地音乐</string>
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="play_time_start">00:00</string>
    <string name="now_play">正在播放：%s</string>
    <string name="now_download">正在下载：%s</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="unable_to_play">暂时无法播放</string>
    <string name="unable_to_download">暂时无法下载</string>
    <string name="unable_to_share">暂时无法分享</string>
    <string name="artist_info">歌手信息</string>
    <string name="artist_info_name">姓名：%s</string>
    <string name="artist_info_country">国籍：%s</string>
    <string name="artist_info_constellation">星座：%s</string>
    <string name="artist_info_stature">身高：%scm</string>
    <string name="artist_info_weight">体重：%skg</string>
    <string name="artist_info_birth">生日：%s</string>
    <string name="artist_info_intro">简介：%s</string>
    <string name="artist_info_empty">暂无歌手信息</string>
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="search_tips">歌曲名、歌手名</string>
    <string name="search_empty">未找到相关结果</string>
    <string name="menu_setting">功能设置</string>
    <string name="menu_share">推荐给朋友</string>
    <string name="menu_about">关于</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_timer">定时停止播放</string>
    <string name="menu_exit">退出应用</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="play">播放</string>
    <string name="sound_effect">音效调节</string>
    <string name="tips">温馨提示</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="device_not_support">您的设备不支持此功能</string>
    <string name="weather_temp">%s°</string>
    <string name="weather_wind">%1$s风%2$s级&#160;&#160;湿度%3$s%%</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>
    <string name="about_project_url">https://github.com/wangchenyan/PonyMusic</string>
    <string name="about_weibo">http://weibo.com/wangchenyan1993</string>
    <string name="about_jianshu">http://www.jianshu.com/users/3231579893ac</string>
    <string name="about_github">https://github.com/wangchenyan</string>
    <string name="music_info">歌曲信息</string>
    <string name="no_permission_location">没有位置信息权限，无法更新天气！</string>
    <string name="no_permission_storage">没有存储空间权限，无法扫描本地歌曲！</string>
    <string name="no_permission_setting">没有权限，无法设置铃声，请授予权限</string>
    <string name="grant_permission_setting">授权成功，请在再次操作以设置铃声</string>
    <string name="no_permission_select_image">没有权限，无法选择图片！</string>
    <string name="alarm_clock_tips">为了使闹钟正常使用，请不要退出一乐</string>
    <string name="network_error">网络连接失败，请检查你的网络设置</string>
    <string name="server_error">服务端开小差了~</string>
    <string name="artist_no_found">找不到该歌手~</string>
    <string name="wifi_tips">当前处于使用流量状态下，若要播放请关闭\"仅WIFI播放\"开关~</string>
    <string name="lrc_label">暂无歌词</string>
    <string name="multiple_choice">多选</string>
    <string name="collection_song">歌曲</string>
    <string name="collection_artist">歌手</string>
    <string name="collection_album">专辑</string>
    <string name="collection_artist_music_and_album_size">歌曲:%1$d&#160;&#160;专辑:%2$d</string>
    <string name="collection_album_music_size">歌曲:%1$d&#160;&#160;</string>
    <string name="online_music_list_artist">&#160;-&#160;%1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="function">功能与服务</string>
    <string name="auto_reversal">横屏自动进入磁带模式</string>
    <string name="allow_mobile_download">使用2G/3G/4G网络下载</string>

    <string name="cache">缓存</string>
    <string name="clear_cache">清除缓存</string>
    <string name="is_clear_cache">是否清除缓存？</string>

    <string name="local_music_no_exit">该文件不存在，自动播放下一首</string>

    <string name="is_open_mobile_download">是否打开2G/3G/4G网络下载开关?</string>
    <string name="is_open_mobile_play">是否打开2G/3G/4G网络播放开关?</string>
    <string name="append_online_music_list_success">已添加到播放列表</string>
    <string name="download_begin">开始下载</string>
    <string name="download_success">下载完成</string>
    <string name="download_fail">下载出错了~</string>

    <string name="tape_view_title">歌曲</string>
    <string name="tape_view_artist">艺术家</string>
    <string name="tape_view_side">Side</string>
    <string name="tape_view_side_value">A</string>
    <string name="tape_view_copyright">一乐 Copyright ©2018 MinardWu</string>

    <string name="select_music_count">已选择%d项</string>
    <string name="album_company">发行公司:%s</string>
    <string name="album_type">专辑类型:%s</string>
    <string name="online_music_play_list_title">播放列表</string>
    <string name="online_music_play_list_song_count">(共%1$d首)</string>
    <string name="album">专辑</string>
    <string name="play_all">播放全部</string>
    <string name="feedback_empty">真的不打算写点什么吗？</string>
    <string name="feedback_quit">内容未提交，确定退出吗？</string>

    <string name="lrc_searching">正在搜索歌词...</string>
    <string name="lrc_can_not_find">找不到歌词</string>
    <string name="lrc_pure_music">纯音乐，请欣赏</string>
    <string name="lrc_no_exist">尚无歌词</string>

    <string name="is_delete_fm_history">确定要删除此记录吗?</string>
    <string name="is_delete_collected_song">确定不再收藏此歌曲吗?</string>
    <string name="is_delete_collected_artist">确定不再关注此歌手吗?</string>
    <string name="is_delete_collected_album">确定不再收藏此专辑吗?</string>
    <string name="delete_collected_artist_success">已取消关注</string>
    <string name="collected_artist_success">关注成功</string>
    <string name="delete_collected_album_success">已取消收藏</string>
    <string name="collected_album_success">收藏成功</string>
    <string name="delete_collected_song_success">已取消收藏</string>
    <string name="collected_song_success">收藏成功</string>

    <string name="drawer_item_night_mode">夜间模式</string>
    <string name="drawer_item_wifi">仅Wi-Fi播放</string>
    <string name="drawer_item_sound_effect">音效调节</string>
    <string name="drawer_item_stop_time">定时停止播放</string>
    <string name="drawer_item_filter_time">文件时间过滤</string>
    <string name="drawer_item_filter_size">文件大小过滤</string>
    <string name="drawer_item_alarm_clock">音乐闹钟</string>
    <string name="drawer_item_collection">我的收藏</string>
    <string name="drawer_item_artist">我的歌手</string>
    <string name="drawer_item_fm_history">FM足迹</string>
    <string name="drawer_item_feedback">反馈</string>
    <string name="drawer_item_info">关于</string>
</resources>
