<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/first"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/action_night"
            android:icon="@drawable/ic_menu_night"
            android:title="@string/menu_night" />
        <item
            android:id="@+id/action_timer"
            android:icon="@drawable/ic_menu_timer"
            android:title="@string/menu_timer" />

    </group>

    <group
        android:id="@+id/second">
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>